--- a/webshop/Views/Home/Contact.cshtml
+++ b/webshop/Views/Home/Contact.cshtml
@@ -2,16 +2,14 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>Feedback or questions about this website</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Pieter Reypenslei 18<br />
+    2640 Mortsel<br />
+    Belgium <br/>
     <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    0471504687<br />
+    <abbr title="Email">E:</abbr>
+    vdbossche.sam@gmail.com
 </address>
