--- a/webshop/Views/Shared/_Layout.cshtml
+++ b/webshop/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <!DOCTYPE html>
-<html>
+<html >
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
    
 
 </head>
-<body>
+<body ng-app="webshop">
     <!----container---->
     <div class="container">
         <!----top-header---->
@@ -63,6 +63,7 @@
                                 <li>@Html.ActionLink("Products", "Index", "Products")</li>
                                 <li class="divider"></li>
                                 <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
+                                <li>@Html.ActionLink("User management", "ManageUserRoles", "Role")</li>
                             </ul>
                         </li>
                     }
