completed checks in user management

--- a/webshop/Views/Account/UserList.cshtml
+++ b/webshop/Views/Account/UserList.cshtml
@@ -5,7 +5,7 @@
 
     <h2>Users</h2>
 
-    @Html.ActionLink("Manage User Role(s)", "ManageUserRoles", "Role")
+   @Html.ActionLink("Roles", "Index","Role") | @Html.ActionLink("Manage User Role(s)", "ManageUserRoles", "Role")
     <hr />
     <table class="table">
         <tr>
@@ -48,5 +48,4 @@
                 </td>
             </tr>
         }
-
     </table>
