--- a/webshop/Views/Role/Edit.cshtml
+++ b/webshop/Views/Role/Edit.cshtml
@@ -5,18 +5,30 @@
 
 <h2>Edit Role</h2>
 
-@Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
+@Html.ActionLink("Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
 <hr />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     @Html.HiddenFor(model => model.Id)
-    <div>
-        Role name
-    </div>
-    <p>
+
+
+    if (Model.Name == "ShopAdmin")
+    {
+        <p class="text-warning">
+            This Role is a default system role and can not be modified!
+        </p>
+    }
+    else
+    { 
+        <div>
+            Role name
+        </div>
         @Html.TextBoxFor(model => model.Name)
-    </p>
-    <input type="submit" value="Save" />
+        <input type="submit" value="Save" />
+    }
+
+
+
 }
