--- a/webshop/Views/Cart/Index.cshtml
+++ b/webshop/Views/Cart/Index.cshtml
@@ -5,8 +5,9 @@
 }
 
 <div ng-controller="CartController">
+
     <div class="row">
-        <div class="col-sm-12 col-md-10 col-md-offset-1">
+        <div class="col-xs-12 col-md-10 col-md-offset-1 table-responsive">
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -19,7 +20,7 @@
                 </thead>
                 <tbody>
                     <!-- empty cart message -->
-                    
+
                     <tr ng-hide="cart.CartCount > 0">
                         <td class="tdCenter" colspan="4">
                             Your cart is empty, Go do some shopping :-)
@@ -29,21 +30,22 @@
                     <tr ng-repeat="item in cart.data">
                         <td class="col-sm-8 col-md-6">
                             <div class="media">
-                                @*TODO: [MAYBE] add thumbnail image for products*@ 
-                                <a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png"> </a>
+                                @*<a class="thumbnail pull-left" href="#"> <img class="media-object" src="http://icons.iconarchive.com/icons/custom-icon-design/flatastic-2/72/product-icon.png"> </a>*@
                                 <div class="media-body">
-                                    <h4 class="media-heading"><a href="#">{{item.Product.Name}}</a></h4>
+                                    <h4 class="media-heading"><a href="@Url.Action("details","Products")?id={{item.ProductId}}">{{item.Product.Name}}</a></h4>
                                 </div>
                             </div>
                         </td>
                         <td class="col-sm-1 col-md-1" style="text-align: center">
-                            <input type="number" class="form-control text-center" value="1">
+
+                            @*ui-keypress="{ enter: 'cart.changeQuantity(item.ProductId,item.Count)'}"*@
+                            <input type="number" class="form-control text-center" min="1" ng-model="item.Count" value="{{item.Count}}" onkeydown="return false" ng-change="cart.changeQuantity(item.ProductId,item.Count)" />
                         </td>
                         <td class="col-sm-1 col-md-1 text-center"><strong>€{{item.Product.Price}}</strong></td>
-                        <td class="col-sm-1 col-md-1 text-center"><strong>TODO:</strong></td>
+                        <td class="col-sm-1 col-md-1 text-center"><strong>€{{item.Product.Price * item.Count}}</strong></td>
                         <td class="col-sm-1 col-md-1">
-                            <button type="button" class="btn btn-danger">
-                                <span class="glyphicon glyphicon-remove"></span> Remove
+                            <button type="button" class="btn btn-danger" ng-click="cart.deleteItem(item.ProductId,item)" title="Remove item">
+                                <span class="glyphicon glyphicon-trash"></span>
                             </button>
                         </td>
                     </tr>
@@ -59,13 +61,13 @@
                         <td></td>
                         <td></td>
                         <td>
-                            <button type="button" class="btn btn-default">
-                                <span class="glyphicon glyphicon-shopping-cart"></span>Continue Shopping
+                            <button type="button" class="btn btn-default" ng-disabled="cart.CartCount == 0" ng-click="cart.clearCart()" title="Clear Cart">
+                                <span class="glyphicon glyphicon-trash"></span>Clear Cart
                             </button>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-success">
-                                Checkout <span class="glyphicon glyphicon-play"></span>
+                            <button type="button" ng-disabled="cart.CartCount == 0" class="btn btn-success">
+                                Checkout
                             </button>
                         </td>
                     </tr>
